--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-<img src="favicon.ico">
+</head>
+<body>
+  <img src="favicon.ico">
+</body>
